Revert "fixed text alignment of queryprev, completed query1"
This reverts commit 8be697c1434cf1c72db2f4d9785676bac9854303.

--- a/QueryApp/src/style.css
+++ b/QueryApp/src/style.css
@@ -1,13 +1,13 @@
 .root *{
 	-fx-font-family: "Roboto";
 	-fx-font-size: 14px;
+	-fx-text-alignment: center;
 	-fx-focus-color: white;
 	-fx-faint-focus-color: white;
 }
 
 .toggle-button, .choice-box{
 	-fx-background-color: linear-gradient(to bottom, peachpuff  0%, #ffb29b 100%);
-	-fx-text-alignment: center;
 }
 
 .toggle-button{
@@ -20,8 +20,6 @@
 	-fx-border-width: 1;
 	-fx-border-radius: 3;
 	-fx-text-fill: midnightblue  ;
-	-fx-scale-x: 1.03;
-	-fx-scale-y: 1.03;
 }
 
 #bg{
